--- a/Scripts/Editor/CampaignSettingsEditor.uxml
+++ b/Scripts/Editor/CampaignSettingsEditor.uxml
@@ -26,4 +26,7 @@
     <ui:Toggle label="Save Level Ammo" name="SaveAmmo" binding-path="SaveAmmoBetweenLevels" />
     <ui:Toggle label="Lock Player in Campaign" name="LockPlayer" binding-path="LockPlayerInCampaign" />
     <uie:PropertyField binding-path="CampaignUnlockCrates" name="CampaignUnlockables" label="Campaign Unlockables" />
+    <ui:VisualElement style="align-items: center; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px;">
+        <ui:Button text="Export JSON to Pallet" display-tooltip-when-elided="true" name="ExportButton" style="padding-top: 5px; padding-bottom: 5px; width: 50%; align-items: stretch;" />
+    </ui:VisualElement>
 </ui:UXML>
